// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> renders properly with default props 1`] = `
"<nav className=\\"navbar navbar-expand-md navbar-dark bg-dark sticky-top\\">
  <button className=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#mugStoreNavbar\\" aria-controls=\\"mugStoreNavbar\\" aria-expanded=\\"false\\" aria-label=\\"Toggle navigation\\">
    <span className=\\"navbar-toggler-icon\\" />
  </button>
  <div className=\\"collapse navbar-collapse\\" id=\\"mugStoreNavbar\\">
    <NavLink className=\\"navbar-brand\\" to=\\"/\\">
      Mug Store
    </NavLink>
    <div className=\\"navbar-nav\\">
      <NavLink to=\\"/catalog\\" className=\\" nav-item nav-link\\">
        Catalog
      </NavLink>
      <NavLink to=\\"/about\\" className=\\"nav-item nav-link\\">
        About
      </NavLink>
      <NavLink to=\\"/cart\\" className=\\"nav-item nav-link\\">
        Cart
      </NavLink>
    </div>
  </div>
  <div>
    <CurrenciesDropdown currentCurrencyId=\\"0\\" currencyOptions={{...}} onCurrencyChange={[Function: mockConstructor]} isCurrenciesLoading={true} hasLoadFailed={false} errorMessage=\\"\\" />
    <Connect(LoginLogoutBar) />
  </div>
</nav>"
`;

exports[`<Navbar /> renders with cart provided 1`] = `
"<nav className=\\"navbar navbar-expand-md navbar-dark bg-dark sticky-top\\">
  <button className=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#mugStoreNavbar\\" aria-controls=\\"mugStoreNavbar\\" aria-expanded=\\"false\\" aria-label=\\"Toggle navigation\\">
    <span className=\\"navbar-toggler-icon\\" />
  </button>
  <div className=\\"collapse navbar-collapse\\" id=\\"mugStoreNavbar\\">
    <NavLink className=\\"navbar-brand\\" to=\\"/\\">
      Mug Store
    </NavLink>
    <div className=\\"navbar-nav\\">
      <NavLink to=\\"/catalog\\" className=\\" nav-item nav-link\\">
        Catalog
      </NavLink>
      <NavLink to=\\"/about\\" className=\\"nav-item nav-link\\">
        About
      </NavLink>
      <NavLink to=\\"/cart\\" className=\\"nav-item nav-link\\">
        Cart
        <span className=\\"badge badge-warning ml-1\\">
          11
        </span>
      </NavLink>
    </div>
  </div>
  <div>
    <CurrenciesDropdown currentCurrencyId=\\"0\\" currencyOptions={{...}} onCurrencyChange={[Function: mockConstructor]} isCurrenciesLoading={true} hasLoadFailed={false} errorMessage=\\"\\" />
    <Connect(LoginLogoutBar) />
  </div>
</nav>"
`;

exports[`<Navbar /> renders with currencies dropdown filled with currencies list 1`] = `
"<nav className=\\"navbar navbar-expand-md navbar-dark bg-dark sticky-top\\">
  <button className=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#mugStoreNavbar\\" aria-controls=\\"mugStoreNavbar\\" aria-expanded=\\"false\\" aria-label=\\"Toggle navigation\\">
    <span className=\\"navbar-toggler-icon\\" />
  </button>
  <div className=\\"collapse navbar-collapse\\" id=\\"mugStoreNavbar\\">
    <NavLink className=\\"navbar-brand\\" to=\\"/\\">
      Mug Store
    </NavLink>
    <div className=\\"navbar-nav\\">
      <NavLink to=\\"/catalog\\" className=\\" nav-item nav-link\\">
        Catalog
      </NavLink>
      <NavLink to=\\"/about\\" className=\\"nav-item nav-link\\">
        About
      </NavLink>
      <NavLink to=\\"/cart\\" className=\\"nav-item nav-link\\">
        Cart
      </NavLink>
    </div>
  </div>
  <div>
    <CurrenciesDropdown currentCurrencyId=\\"0\\" currencyOptions={{...}} onCurrencyChange={[Function: mockConstructor]} isCurrenciesLoading={false} hasLoadFailed={false} errorMessage=\\"\\" />
    <Connect(LoginLogoutBar) />
  </div>
</nav>"
`;

exports[`<Navbar /> renders with currentUser provided 1`] = `
"<nav className=\\"navbar navbar-expand-md navbar-dark bg-dark sticky-top\\">
  <button className=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#mugStoreNavbar\\" aria-controls=\\"mugStoreNavbar\\" aria-expanded=\\"false\\" aria-label=\\"Toggle navigation\\">
    <span className=\\"navbar-toggler-icon\\" />
  </button>
  <div className=\\"collapse navbar-collapse\\" id=\\"mugStoreNavbar\\">
    <NavLink className=\\"navbar-brand\\" to=\\"/\\">
      Mug Store
    </NavLink>
    <div className=\\"navbar-nav\\">
      <NavLink to=\\"/catalog\\" className=\\" nav-item nav-link\\">
        Catalog
      </NavLink>
      <NavLink to=\\"/about\\" className=\\"nav-item nav-link\\">
        About
      </NavLink>
      <NavLink to=\\"/cart\\" className=\\"nav-item nav-link\\">
        Cart
      </NavLink>
    </div>
  </div>
  <div>
    <CurrenciesDropdown currentCurrencyId=\\"0\\" currencyOptions={{...}} onCurrencyChange={[Function: mockConstructor]} isCurrenciesLoading={true} hasLoadFailed={false} errorMessage=\\"\\" />
    <Connect(LoginLogoutBar) />
  </div>
</nav>"
`;

exports[`<Navbar /> renders with hasCurrenciesLoadFailed and errorCurrenciesLoading provided 1`] = `
"<nav className=\\"navbar navbar-expand-md navbar-dark bg-dark sticky-top\\">
  <button className=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#mugStoreNavbar\\" aria-controls=\\"mugStoreNavbar\\" aria-expanded=\\"false\\" aria-label=\\"Toggle navigation\\">
    <span className=\\"navbar-toggler-icon\\" />
  </button>
  <div className=\\"collapse navbar-collapse\\" id=\\"mugStoreNavbar\\">
    <NavLink className=\\"navbar-brand\\" to=\\"/\\">
      Mug Store
    </NavLink>
    <div className=\\"navbar-nav\\">
      <NavLink to=\\"/catalog\\" className=\\" nav-item nav-link\\">
        Catalog
      </NavLink>
      <NavLink to=\\"/about\\" className=\\"nav-item nav-link\\">
        About
      </NavLink>
      <NavLink to=\\"/cart\\" className=\\"nav-item nav-link\\">
        Cart
      </NavLink>
    </div>
  </div>
  <div>
    <CurrenciesDropdown currentCurrencyId=\\"0\\" currencyOptions={{...}} onCurrencyChange={[Function: mockConstructor]} isCurrenciesLoading={false} hasLoadFailed={true} errorMessage=\\"test error\\" />
    <Connect(LoginLogoutBar) />
  </div>
</nav>"
`;
